--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==19.9.0
 idna==2.7
 Pillow==5.3.0
 psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
 pytz==2018.7
 requests==2.20.1
 urllib3==1.24.1
