--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
+backcall==0.1.0
 Brotli==1.0.7
 certifi==2018.11.29
 chardet==3.0.4
+decorator==4.3.0
 dj-database-url==0.5.0
 Django==2.1.3
 django-heroku==0.3.1
 gunicorn==19.9.0
 idna==2.7
+ipython==7.2.0
+ipython-genutils==0.2.0
+jedi==0.13.2
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
 Pillow==5.3.0
+prompt-toolkit==2.0.7
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
+ptyprocess==0.6.0
+Pygments==2.3.1
 pytz==2018.7
 requests==2.20.1
+six==1.12.0
+traitlets==4.3.2
 urllib3==1.24.1
 virtualenv==16.1.0
+wcwidth==0.1.7
 whitenoise==4.1.2
